--- a/tests/qunit/qunit.css
+++ b/tests/qunit/qunit.css
@@ -1,5 +1,5 @@
 /**
- * QUnit v1.11.0pre-5542510a63bae14cbffc571033369aa9962ec946 2012-12-19 - A JavaScript Unit Testing Framework
+ * QUnit v1.11.0 - A JavaScript Unit Testing Framework
  *
  * http://qunitjs.com
  *
